--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emailjs/browser": "^4.4.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
